--- a/views/Window2.xaml
+++ b/views/Window2.xaml
@@ -108,7 +108,7 @@
                                 Height="35"
                                 Margin="15,25,0,40">
 
-                    <Image Source="C:\Users\arjkr\source\repos\WpfApp4\WpfApp4\images\logo.png" Height="30"/>
+                    <Image Source="images\logo.png" Height="30"/>
                     <TextBlock Text="We Care"
                                    Foreground="{StaticResource titleColor2}"
                                    FontSize="20"
@@ -235,7 +235,7 @@
                                      StrokeThickness="2"
                                      >
                                                 <Ellipse.Fill>
-                                                    <ImageBrush ImageSource="C:\Users\arjkr\source\repos\WpfApp4\WpfApp4\images\arjun12 (4).png"/>
+                                                    <ImageBrush ImageSource="images\arjun12 (4).png"/>
                                                 </Ellipse.Fill>
                                             </Ellipse>
                                         </DataTemplate>
@@ -253,7 +253,7 @@
                                                     <DataTemplate>
                                                         <StackPanel Orientation="Horizontal">
 
-                                                            <Image Source="C:\Users\arjkr\source\repos\WpfApp4\WpfApp4\images\logout1.png" Width="16" Height="16" VerticalAlignment="Center"/>
+                                                            <Image Source="images\logout1.png" Width="16" Height="16" VerticalAlignment="Center"/>
                                                             <TextBlock Text="Logout" VerticalAlignment="Center"/>
                                                         </StackPanel>
                                                     </DataTemplate>
