--- a/App.xaml
+++ b/App.xaml
@@ -2,12 +2,18 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MVVM_App"
-             StartupUri="MainWindow.xaml">
+             Startup="ApplicationStart" 
+    >
+    <!--StartupUri="views/userDashboard.xaml"-->
+    
+    
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Styles/UIColors.xaml"/>
                 <ResourceDictionary Source="/Styles/ButtonStyles.xaml"/>
+                <ResourceDictionary Source="Styles\UserUIColors.xaml"/>
+                <ResourceDictionary Source="Styles\UserButtonStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
