--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="WpfApp4.App"
+﻿<Application x:Class="MVVM_App.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfApp4"
+             xmlns:local="clr-namespace:MVVM_App"
              Startup="ApplicationStart">
 	<Application.Resources>
 
