--- a/CustomControls/BindablePasswordBox.xaml
+++ b/CustomControls/BindablePasswordBox.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="WpfApp4.CustomControls.BindablePasswordBox"
+﻿<UserControl x:Class="MVVM_App.CustomControls.BindablePasswordBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfApp4.CustomControls"
+             xmlns:local="clr-namespace:MVVM_App.CustomControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <PasswordBox x:Name="txtpassword" 
