--- a/views/AddDoctor.xaml
+++ b/views/AddDoctor.xaml
@@ -1,39 +1,25 @@
-﻿<UserControl x:Class="WpfApp4.views.AddDoctor"
+﻿<UserControl x:Class="MVVM_App.views.AddDoctor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfApp4.views"
-             xmlns:viewModel="clr-namespace:WpfApp4.ViewModels"
+             xmlns:local="clr-namespace:MVVM_App.views"
+             xmlns:viewModel="clr-namespace:MVVM_App.ViewModels"
       
-        xmlns:CustomControls="clr-namespace:WpfApp4.CustomControls" 
+        xmlns:CustomControls="clr-namespace:MVVM_App.CustomControls" 
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.DataContext>
         <viewModel:AddDoctor/>
     </UserControl.DataContext>
 
-    <Grid >
+    <Grid Grid.Row="0" >
 
-        <!-- Header -->
-        <Grid Background="CadetBlue" Height="80" VerticalAlignment="Top" Margin="20">
-            <TextBlock Text="Add Timings" Foreground="White" FontSize="24" Margin="20" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-            <Button x:Name="btn2"  Grid.Row="0" Content="Go Back" HorizontalAlignment="left" VerticalAlignment="Top" Margin="20,25" Padding="15 5" Width="80" Height="30" Background="White" Foreground="#2B547E" FontSize="16" FontWeight="Bold" BorderThickness="0"  >
-                <Button.Template>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="5">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Border>
-                    </ControlTemplate>
-                </Button.Template>
-            </Button>
-        </Grid>
 
-        <!-- Main Content -->
 
-        <Border Background="White" CornerRadius="10" Margin="40 100 40 40" Padding="30" VerticalAlignment="Center">
+        <Border Background="White" CornerRadius="10" Margin="20,10,20,0" Padding="30" VerticalAlignment="Top" Height="394">
 
-            <Grid>
+            <Grid Grid.Row="0" Margin="-4,-54,-4,-108">
 
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -52,7 +38,7 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Row="0"  Margin="0,20" Text="Enter the Information" FontSize="24" FontWeight="Bold"/>
+                <TextBlock Grid.Row="0"  Margin="0,35,0,5" Text="Enter the Information" FontSize="24" FontWeight="Bold"/>
 
                 <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Left"  Margin="0,10">
 
@@ -130,7 +116,7 @@
 
                 </Canvas>
 
-                <Button x:Name="btn1"  Grid.Row="9" Content="Add Timing" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="120,10,0,0" Padding="15 5" Width="120" Height="30" Background="CadetBlue" Foreground="White" FontSize="16" FontWeight="Bold" BorderThickness="0">
+                <Button x:Name="btn1"  Grid.Row="9" Content="Add Timing" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="120,10,0,0" Padding="15 5" Width="120" Height="30" Background="CadetBlue" Foreground="black" FontSize="16" FontWeight="Bold" BorderThickness="0">
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
                             <Border CornerRadius="5">
@@ -145,5 +131,5 @@
 
         </Border>
     </Grid>
-    
+
 </UserControl>
