--- a/views/UpdateDoctor.xaml
+++ b/views/UpdateDoctor.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="WpfApp4.views.UpdateDoctor"
+﻿<UserControl x:Class="MVVM_App.views.UpdateDoctor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfApp4.views"
+             xmlns:local="clr-namespace:MVVM_App.views"
                  
         xmlns:fa="http://schemas.fontawesome.io/icons/"
-        xmlns:viewModel="clr-namespace:WpfApp4.ViewModels"
+        xmlns:viewModel="clr-namespace:MVVM_App.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
