--- a/views/Window1.xaml
+++ b/views/Window1.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WpfApp4.views.Window1"
+﻿<Window x:Class="MVVM_App.views.Window1"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:viewModel="clr-namespace:WpfApp4.ViewModels"
-        xmlns:local="clr-namespace:WpfApp4.views"
-        xmlns:CustomControls="clr-namespace:WpfApp4.CustomControls"
+        xmlns:viewModel="clr-namespace:MVVM_App.ViewModels"
+        xmlns:local="clr-namespace:MVVM_App.views"
+        xmlns:CustomControls="clr-namespace:MVVM_App.CustomControls"
         mc:Ignorable="d"
         Title="Login1"  Height="450" Width="800" FontSize="18" WindowState="Maximized"
         ResizeMode="CanResize" MinHeight="450" MinWidth="800">
