--- a/views/Window2.xaml
+++ b/views/Window2.xaml
@@ -14,7 +14,6 @@
         <viewModel:MainViewModel/>
     </Window.DataContext>
 
-    
     <Window.Resources>
 
         <DataTemplate DataType="{x:Type viewModel:AddDoctor}">
@@ -27,6 +26,10 @@
 
         <DataTemplate DataType="{x:Type viewModel:AddConsult}">
             <local:AddConsult/>
+        </DataTemplate>
+        
+        <DataTemplate DataType="{x:Type viewModel:ViewBookings}">
+            <local:ViewBookings/>
         </DataTemplate>
 
         <Style x:Key="DropdownItemStyle" TargetType="Button">
@@ -149,7 +152,7 @@
                 </RadioButton>
                 <RadioButton Style="{StaticResource menuButton}"
                                  Tag="{StaticResource color2}"
-                                 Command="{Binding ShowUpdateDoctorCommand}">
+                                 Command="{Binding ShowBookings}">
                     <StackPanel Orientation="Horizontal">
                         <fa:FontAwesome Icon="Book" Margin="10,2,0,0" />
                         <TextBlock Text="View Booking" Margin="10,0,0,0"/>
