--- a/views/AddDoctor.xaml
+++ b/views/AddDoctor.xaml
@@ -4,25 +4,24 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MVVM_App.views"
-             xmlns:viewModel="clr-namespace:MVVM_App.ViewModels"
-      
-        xmlns:CustomControls="clr-namespace:MVVM_App.CustomControls" 
+             
+        xmlns:viewModel="clr-namespace:MVVM_App.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    
     <UserControl.DataContext>
         <viewModel:AddDoctor/>
     </UserControl.DataContext>
+    <Grid>
+       
 
-    <Grid Grid.Row="0" >
+        <!-- Main Content -->
 
+        <Border Background="White" CornerRadius="10" Margin="95,60,70,0" Padding="30" VerticalAlignment="Top">
 
-
-        <Border Background="White" CornerRadius="10" Margin="20,10,20,0" Padding="30" VerticalAlignment="Top" Height="394">
-
-            <Grid Grid.Row="0" Margin="-4,-54,-4,-108">
+            <Grid>
 
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
@@ -38,98 +37,64 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Row="0"  Margin="0,35,0,5" Text="Enter the Information" FontSize="24" FontWeight="Bold"/>
-
-                <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Left"  Margin="0,10">
-
-                    <TextBlock x:Name="text8" Text="Registered Doctors:" Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="Bold" />
-                    <ComboBox x:Name="doctorType1" Width="250" VerticalAlignment="Center"  Margin="50,0,0,0" ItemsSource="{Binding DoctorNames}"  />
-                </StackPanel>
-                <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Left"  Margin="0,10">
-
-                    <TextBlock x:Name="text1" Text="Select Consultation Type:" Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="Bold" />
-                    <ComboBox x:Name="ConsultType1" Width="250" VerticalAlignment="Center" Margin="50,0,0,0" />
-                </StackPanel>
+                <TextBlock Grid.Row="1"  Margin="0,3,-38,18" Text="Enter the Information" FontSize="18" FontWeight="Bold" Grid.ColumnSpan="2"/>
 
 
-                <StackPanel Grid.Row="4" Orientation="Horizontal"  HorizontalAlignment="Left" Margin="0,10">
-                    <TextBlock x:Name="text3" Text="Select From Date: " Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="Bold"/>
-                    <DatePicker x:Name="Datepicker1" Width="250" VerticalAlignment="Center" Margin="50,0,0,0" />
-                </StackPanel>
-                <StackPanel Grid.Row="5" Orientation="Horizontal"  HorizontalAlignment="Left" Margin="0,10">
-                    <TextBlock x:Name="text7" Text="Select To Date: " Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="Bold"/>
-                    <DatePicker x:Name="Datepicker2" Width="250" VerticalAlignment="Center" Margin="50,0,0,0" />
-                </StackPanel>
-                <StackPanel Grid.Row="6" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10">
-                    <TextBlock x:Name="text9" Text="Doctor Availibility" Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="Bold" />
-                    <CheckBox x:Name="checker1" Width="15" VerticalAlignment="Center"  Margin="50,10" />
-                    <TextBlock x:Name="text10" Text="10-6 on selected date" Width="200" Margin="-40,0" VerticalAlignment="Center" FontSize="11"  />
-                </StackPanel>
-                <StackPanel Grid.Row="7" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10,0,0">
-                    <TextBlock x:Name="text4" Text="Select From Time:" Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="Bold" />
-                    <ComboBox x:Name="Fromtime1" Width="250" VerticalAlignment="Center" Margin="50,0,0,0" >
+                <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Left"  Margin="0,10,0,40">
+
+                    <TextBlock x:Name="text1" HorizontalAlignment="Left" Text="Select Consultation Type" Width="200" VerticalAlignment="Center" FontSize="5" FontWeight="SemiBold" />
+                    <ComboBox x:Name="ConsultType" Width="250" VerticalAlignment="Center" ItemsSource="{Binding consuld}">
                         <ComboBox.ItemTemplate>
                             <DataTemplate>
-                                <TextBlock />
+                                <TextBlock Text="{Binding}" />
                             </DataTemplate>
                         </ComboBox.ItemTemplate>
-                    </ComboBox>
-
+                        </ComboBox>
                 </StackPanel>
 
-                <StackPanel Grid.Row="8" Orientation="Horizontal"   Margin="0,10">
-                    <TextBlock x:Name="text5" Text="Select To Time:" Width="200" VerticalAlignment="Center"  FontSize="14" FontWeight="Bold" />
-                    <ComboBox x:Name="Endtime1" Width="250" VerticalAlignment="Center"  Margin="50,0,0,0" >
-                        <ComboBox.ItemTemplate>
-                            <DataTemplate>
-                                <TextBlock  />
-                            </DataTemplate>
-                        </ComboBox.ItemTemplate>
-                    </ComboBox>
+                <StackPanel Grid.Row="2" Orientation="Horizontal"  HorizontalAlignment="Left" Margin="0,10">
+                    <TextBlock x:Name="text2" Text="Enter the Name" Width="200" VerticalAlignment="Center" FontSize="5" FontWeight="SemiBold"  />
+                    <TextBox x:Name="Doctor" Width="250" VerticalAlignment="Center" />
                 </StackPanel>
-                <StackPanel Grid.Column="0" Grid.Row="2" Orientation="Horizontal"  HorizontalAlignment="Center" Margin="-70,0,0,0">
+
+
+                <StackPanel Grid.Column="0" Grid.Row="2" Orientation="Horizontal"  HorizontalAlignment="Center" Margin="30,0,0,0">
                     <TextBlock Text=":" Width="10" VerticalAlignment="Center" FontSize="20" FontWeight="Bold"  />
                 </StackPanel>
-                <StackPanel Grid.Column="0" Grid.Row="3" Orientation="Horizontal"  HorizontalAlignment="Center" Margin="-70,0,0,0">
-                    <TextBlock Text=":" Width="10" VerticalAlignment="Center" FontSize="20" FontWeight="Bold"  />
-                </StackPanel>
-                <StackPanel Grid.Column="0" Grid.Row="4" Orientation="Horizontal"  HorizontalAlignment="Center" Margin="-70,0,0,0">
-                    <TextBlock Text=":" Width="10" VerticalAlignment="Center" FontSize="20" FontWeight="Bold"  />
-                </StackPanel>
-                <StackPanel Grid.Column="0" Grid.Row="5" Orientation="Horizontal"  HorizontalAlignment="Center" Margin="-70,0,0,0">
-                    <TextBlock Text=":" Width="10" VerticalAlignment="Center" FontSize="20" FontWeight="Bold"  />
-                </StackPanel>
-                <StackPanel Grid.Column="0" Grid.Row="6" Orientation="Horizontal"  HorizontalAlignment="Center" Margin="-70,0,0,0">
-                    <TextBlock Text=":" Width="10" VerticalAlignment="Center" FontSize="20" FontWeight="Bold"  />
-                </StackPanel>
-                <StackPanel Grid.Column="0" Grid.Row="7" Orientation="Horizontal"  HorizontalAlignment="Center" Margin="-70,0,0,0">
+                <StackPanel Grid.Column="0" Grid.Row="3" Orientation="Horizontal"  HorizontalAlignment="Center" Margin="30,-30,0,0">
                     <TextBlock Text=":" Width="10" VerticalAlignment="Center" FontSize="20" FontWeight="Bold"  />
                 </StackPanel>
 
-                <StackPanel Grid.Column="0" Grid.Row="8" Orientation="Horizontal"  HorizontalAlignment="Center" Margin="-70,0,0,0">
-                    <TextBlock Text=":" Width="10" VerticalAlignment="Center" FontSize="20" FontWeight="Bold"  />
+                <StackPanel Grid.Column="0" Grid.Row="4" Orientation="Horizontal"  HorizontalAlignment="Right" Margin="120,0,0,0">
+                    <Button x:Name="btn1"  Grid.Row="5" Content="Add Doctor" HorizontalAlignment="Right"
+                            VerticalAlignment="Top" Margin="450,-12,0,0"  Width="70"
+                            Height="25" Background="CadetBlue" Foreground="White" FontSize="11"
+                            FontWeight="SemiBold" BorderThickness="0" Grid.RowSpan="3" Grid.ColumnSpan="4">
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Border Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="5">
+                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+                    <Button x:Name="btn3"  Grid.Row="4" Content="Update Time" HorizontalAlignment="Right"
+                            VerticalAlignment="Top" Margin="10,-10,0,0" Padding="15 5" Width="70"
+                            Height="25" Background="CadetBlue" Foreground="White" FontSize="11"
+                            FontWeight="SemiBold" BorderThickness="0"  Grid.RowSpan="4" Grid.ColumnSpan="4">
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Border Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="5">
+                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+
                 </StackPanel>
-
-                <Canvas>
-
-                    <Image x:Name="img1" Source="C:\Users\arjkr\Downloads\R (1).jpg" Width="100" Height="100" Canvas.Left="566" Canvas.Top="147"/>
-
-                </Canvas>
-
-                <Button x:Name="btn1"  Grid.Row="9" Content="Add Timing" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="120,10,0,0" Padding="15 5" Width="120" Height="30" Background="CadetBlue" Foreground="black" FontSize="16" FontWeight="Bold" BorderThickness="0">
-                    <Button.Template>
-                        <ControlTemplate TargetType="Button">
-                            <Border CornerRadius="5">
-                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                            </Border>
-                        </ControlTemplate>
-                    </Button.Template>
-                </Button>
-
 
             </Grid>
 
         </Border>
     </Grid>
-
 </UserControl>
