--- a/views/AddTimings.xaml
+++ b/views/AddTimings.xaml
@@ -43,7 +43,7 @@
                 <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Left"  Margin="0,10">
 
                     <TextBlock x:Name="text8" Text="Registered Doctors:" Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="Bold" />
-                    <ComboBox x:Name="doctorType1" Width="250" VerticalAlignment="Center"  Margin="50,0,0,0" ItemsSource="{Binding DoctorNames}"  />
+                    <ComboBox x:Name="doctorType1" Width="250" VerticalAlignment="Center"  Margin="50,0,0,0" ItemsSource="{Binding DoctorNames}" SelectionChanged="doctorType1_SelectionChanged" />
                 </StackPanel>
                 <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Left"  Margin="0,10">
 
